cabal-version:       2.0
name:                lambdamap
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Sam Schweigel
maintainer:          s.schweigel@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    Lambdamap
  build-depends:      base ^>= 4.12.0.0
                    , bytestring ^>= 0.10.8.2
                    , directory ^>= 1.3.3.2
                    , filepath >= 1.4.2.1
                    , friday ^>= 0.2.3.1
                    , friday-devil ^>= 0.1.1.1
                    , mtl ^>= 2.2.2

executable lambdamap-web
  main-is:             Main.hs
  other-modules:       App
                     , Handlers
                     , Views
                     , Database
                     , Routes
                     , Slicer
                     , Style
  build-depends:       base ^>= 4.12.0.0
                     , bytestring ^>= 0.10.8.2
                     , clay ^>= 0.13.1
                     , directory ^>= 1.3.3.2
                     , filepath >= 1.4.2.1
                     , http-media ^>= 0.8.0.0
                     , lambdamap
                     , lucid ^>= 2.9.11
                     , monad-logger ^>= 0.3.30
                     , mtl ^>= 2.2.2
                     , persistent ^>= 2.10.0
                     , persistent-sqlite ^>= 2.10.0
                     , persistent-template ^>= 2.7.1
                     , random ^>= 1.1
                     , servant ^>= 0.16.1
                     , servant-lucid ^>= 0.9
                     , servant-multipart ^>= 0.11.4
                     , servant-rawm ^>= 0.3.0.1
                     , servant-server ^>= 0.16.1
                     , string-interpolate ^>= 0.1.0.1
                     , text ^>= 1.2.3.1
                     , tomland ^>= 1.0.1.0
                     , wai-app-static ^>= 3.1.6.3
                     , warp ^>= 3.2.27
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded "-with-rtsopts=-N"
